--- a/src/components/Game.scss
+++ b/src/components/Game.scss
@@ -1,7 +1,15 @@
 .game {
+  background-color: #9a9393;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   margin: auto;
-  background: #222;
   overflow: hidden;
   box-shadow: 0 0 20px #000;
+  cursor: url('../images/bottle.svg'), auto;
+}
+
+.win {
+  font-size: 32px;
 }
